# FedPSS

./: README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt
configs/: gemma4.yaml  test.yaml
data/examples/: bioarc_schema_example.json
docs/: BIOARC_DATA_FORMAT.md  MODEL_CARD.md
outputs/debug/: embeddings.npy  metrics.json
outputs/test_run/: embeddings.npy  metrics.json
schema/: bioarc_record.schema.json  fedpss_config.schema.json
scripts/: plot_article_figures.py  run_synthetic_experiment.py
src/fedpss/: config.py  data.py  experiment.py  metrics.py  privacy.py  training.py
src/fedpss/federated/: client.py  server.py
src/fedpss/llm/: gemma4.py  mock.py
src/fedpss/models/: multimodal.py
src/fedpss/retrieval/: index.py
tests/: test_data.py  test_federated.py  test_model_and_metrics.py
