[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedpss-gemma4"
version = "0.1.0"
description = "Federated patient similarity search over temporal multimodal clinical records with Gemma 4 note representations."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mohammad Tanhaei"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "torch>=2.0"
]

[project.optional-dependencies]
llm = ["transformers>=4.50", "accelerate>=0.26"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
