[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedpss"
version = "0.2.0"
description = "Privacy-governed federated patient-record similarity retrieval with multilingual structured descriptor mapping."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mohammad Tanhaei"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "torch>=2.0"
]

[project.optional-dependencies]
semantic = ["transformers>=4.50", "accelerate>=0.26"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
